== 28/Oct/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b103.zip V1.6-b103]  ==

''' Jandy '''

Resolved issue reporting cleaner on /off. Resovles issue [ticket:760]
Implements stanby state. [ticket:761]

== 18/Oct/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b102.zip V1.6-b102]  ==

''' Comfort '''

Resolved issue with outputs not functioning. [ticket:759]

== 25/Sep/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b101.zip V1.6-b101]  ==

''' Groovy '''

Resolved model packaging issue.
Moved sample model, Template.groovy, to templates directory rather than models.

== 19/Aug/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b100.zip V1.6-b100]  ==

''' Jandy '''

Implemented Auxiliary devices
Swallowed echo'd messages on Jandy startup rather than incorrectly generating an error

''' Advantage Air '''

Resolved issues with Status line from unit
Added error handler


== 19/Aug/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b99.zip V1.6-b99]  ==

''' Jandy '''

Implement OUTPUT functions to support the output controls.  Resolves [ticket:754]
Ensure PUMP and SPA units are correctly queried on startup. Resolves [ticket:757]
Jandy now includes error text in the log file. Resolved [ticket:756]

''' Advantage Air '''

The SYS message is now correctly interpreted (as per updated docs received from Advantage Air). Resolves [ticket:758]

== 10/Jul/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b98.zip V1.6-b98]  ==

''' Jandy '''

Removed polling, more selective error reporting

== 1/Jul/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b97.zip V1.6-b97]   [attachment:wiki:SoftwareReleases:eLife-1.6b97-libs.zip Libs-V1.6b97]  ==

Resolved error messages when adding duplicate ALARM devices for the Comfort configuration. [ticket:753]
The display_name that has been used with the device with key 00 is the display_name that flash should send arm messages too.

For example
{{{
        <ALARM KEY="00" DISPLAY_NAME="ALARM"/>