@@ -1,4 +1,4 @@
-#Wed Oct 28 14:48:24 EST 2009
+#Thu Nov 12 22:02:52 EST 2009
 major_version=1.6b
-minor_version=104
+minor_version=105
 app_name=eLife
